turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:15: error: ';' expected but ',' found.
var rule:Array[Array[Array[Int]]] = T,U
                                     ^